--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -1,6 +1,6 @@
 .nav-bar {
     background: #3d1436 !important;
-    border-bottom: #db9c39 !important;
+    border-bottom: 3px solid #db9c39 !important;
 }
 
 .menu-bar {
