--- a/assets/css/images.css
+++ b/assets/css/images.css
@@ -1,5 +1,5 @@
 .front-page-img {
-    background: url('../img/index/frontpage.jpg'); 
+    background: url('../img/restaurant.jpg'); 
     height: 500px;
     background-attachment: fixed;
     background-position: center;
