--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -7,7 +7,7 @@
     position: absolute; 
     top: 100px;
     left: 30px;
-    color: #db9c39;
+    color: #db9c39 !important;
 }
 
 nav #thecastlelogo {
