--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,12 +55,12 @@ p {
 }
 
 .menu-buttons {
-    color: #b49a69;
+    color: #db9c39;
     font-size: 20px;
 }
 
 .menu-buttons-brand {
-    color:  #b49a69;
+    color:  #db9c39;
     font-size: 30px;
     border: 1px solid #242427;
     border-radius: 100%;
