--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+body{
+    background: #3d1436e0;
+}
+
 p {
     margin-bottom: 0px;
 }
@@ -39,6 +43,14 @@ p {
 .title {
     padding-top: 20px;
     letter-spacing: 5px;
+}
+
+.minidesc {
+    color: wheat;
+}
+
+.minititle {
+    color: wheat;
 }
 
 .bg-none {
