--- a/assets/css/images.css
+++ b/assets/css/images.css
@@ -107,7 +107,7 @@
 
 @media only screen and (max-width: 320px) {
     .front-page-img {
-        background: url('../img/index/frontpage.jpg'); 
+        background: url('../img/spicevilla.png'); 
         height: 340px;
         background-attachment: fixed;
         background-position: center;
@@ -122,7 +122,7 @@
 @media only screen and (max-width: 767px) {
 
     .img-food-area {
-        background: url('../img/index/food.jpg');
+        background: url('../img/menu1.jpg');
         background-repeat: no-repeat;
         background-size: cover;
         margin-top: 10px;
@@ -130,7 +130,7 @@
         margin-left: 0px !important;
     }
     .img-drink-area {
-        background: url('../img/index/drink.jpg');
+        background: url('../img/restaurant.jpg');
         background-repeat: no-repeat;
         background-size: cover;
         margin-top: 10px;
@@ -138,7 +138,7 @@
         margin-left: 0px !important;
     }
     .img-gallery-area {
-        background: url('../img/index/gallery.jpg');
+        background: url('../img/gallery1.jpg');
         background-repeat: no-repeat;
         background-size: cover;
         margin-top: 10px;
